--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.11.0",
+    "@sanity/client": "^6.1.1",
     "@types/node": "20.2.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.3",
-    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.8.0",
+    "typescript": "5.0.4",
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
